syntax = "proto3";

package user;

option go_package = "github.com/sbilibin2017/gophkeeper/pkg/grpc";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

message UserAddRequest {
  string secret_name = 1;  
  string username = 2;
  string password = 3;
  map<string, string> meta = 4;
}

message UserFilterRequest {
  string secret_name = 1;
}

message UserDB {
  string secret_name = 1;
  string secret_owner = 2;
  string username = 3;
  string password = 4;
  map<string, string> meta = 5;
  google.protobuf.Timestamp updated_at = 6;
}

service UserService {
  rpc Add(UserAddRequest) returns (google.protobuf.Empty);
  rpc Get(UserFilterRequest) returns (UserDB);
  rpc List(google.protobuf.Empty) returns (stream UserDB); 
}
