syntax = "proto3";

package login;

option go_package = "pkg/grpc";

// Login messages
message LoginRequest {
  string username = 1;
  string password = 2;
}

message LoginResponse {
  string token = 1;
}

// Service for user login
service LoginService {
  rpc Login(LoginRequest) returns (LoginResponse);
}
